--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ mysqlclient==2.2.5
 django-environ==0.11.2
 djangorestframework==3.15.2
 pillow==11.0.0
+drf-yasg==1.21.8
+django-filter==24.3
+django-silk==5.3.1
+djangorestframework-simplejwt==5.3.1
